<resources>
    <string name="app_name">Colorist</string>
    <string name="about_developed">Developed and powered by\nKaterina Bondar</string>
    <string name="about_instagram">Instagram:</string>
    <string name="link"><a href="https://www.instagram.com/twinklee_ee/">twinklee_ee</a></string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="difficulty_level">Select a difficulty level: </string>
    <string name="easy">Easy</string>
    <string name="average">Average</string>
    <string name="difficult">Difficult</string>
</resources>
