<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/about_developed"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_about_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#a6a6a6"
        android:text="@string/about_instagram"/>

    <TextView
        android:id="@+id/textView_about_twinklee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/link"
        android:textColor="#a6a6a6"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"/>

    </LinearLayout>

</LinearLayout>