<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficulty_level"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:text="@string/difficulty_level"
        android:textSize="25sp"
        android:textStyle="normal"
        android:paddingTop="30dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <RadioButton
            android:id="@+id/button_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/easy"
            android:textSize="17sp"
            android:textColor="#a6a6a6"
            android:buttonTint="#ffffff"
            android:checked="true" />

        <RadioButton
            android:id="@+id/button_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/average"
            android:textSize="17sp"
            android:textColor="#a6a6a6"
            android:buttonTint="#ffffff"/>

        <RadioButton
            android:id="@+id/button_difficult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/difficult"
            android:textSize="17sp"
            android:textColor="#a6a6a6"
            android:buttonTint="#ffffff"/>

    </RadioGroup>

</LinearLayout>
